syntax = "proto3";

option go_package = "./v1";

service Internal {
  rpc TokenService (TokenRequest) returns (TokenResponse) {}
}

message TokenRequest {
  string service = 1;
  string password = 2;
}

message TokenResponse {
  string acessToken = 1;
}